data/derived/fa15/progs/unify/prog0154.ml.out
Characters 39-48:
  let fixpoint (f,b) = wwhile ((fun y -> (b = f b)),b);;
                                         ^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a * bool
